# social-signals

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: _pre-publish.yml  _publish.yml  pre-publish.yml  publish.yml  tests.yml
docs/: dev-tools-comparison-tables.md
plots/: README.md
plots/src/plots/: main.py
scripts/: analyze-repo-file.sh  fetch-repos.sh
scripts/plots/: pyproject.toml
scripts/results/containers/: containers-sosig.md
scripts/results/tf/: terraform-tools-sosig.md
sosig/: .gitignore  README.md  pyproject.toml
sosig/src/sosig/: __init__.py  main.py
sosig/src/sosig/commands/: common.py  config_cmds.py  db_cmds.py  gh_cmds.py  gh_metrics.py  setup.py
sosig/src/sosig/core/: config.py  db.py  interfaces.py  logger.py  models.py
sosig/src/sosig/utils/: display_service.py  gh_analyzer.py  gh_repo_dao.py  gh_repo_service.py  gh_utils.py  setup_utils.py
ssig/: README.md  pyproject.toml
ssig/src/ssig/: main.py
ssig/src/ssig/commands/: ghmetrics.py  setup.py
ssig/src/ssig/core/: config.py  db.py  logger.py  models.py
ssig/src/ssig/utils/: gh_analyzer.py  gh_repo_dao.py  gh_utils.py  setup_utils.py
tests/: test_commands.py
