[project]
name = "sosig"
version = "0.3.0"
description = "A command-line tool for analyzing GitHub repositories and calculating social signals based on various metrics."
authors = [
    { name = "will-wright-eng", email = "will.wright.engineeering@gmail.com" }
]
dependencies = [
    "typer>=0.12.5",
    "rich>=13.9.4",
    "pydantic>=2.9.2",
    "sqlmodel>=0.0.22",
    "pip>=24.3.1",
]
readme = "../README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sosig"]

[project.scripts]
sosig = "sosig:cli"

[tool.pytest.ini_options]
addopts = "-v --cov=sosig --cov-report=term-missing"
testpaths = ["../tests"]

[tool.coverage.run]
source = ["sosig"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
