[project]
name = "ssig"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "willwrighteng", email = "will.wright.engineeering@gmail.com" }
]
dependencies = [
    "typer>=0.12.5",
    "rich>=13.9.4",
    "pydantic>=2.9.2",
    "sqlmodel>=0.0.22",
    "pip>=24.3.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ssig"]

[project.scripts]
ssig = "ssig:cli"
