[project]
name = "plots"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "will-wright-eng", email = "will.wright.engineering@gmail.com" }
]
dependencies = [
    "matplotlib>=3.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plots"]

[project.scripts]
plots = "plots.main:main"
